# recochan

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  ratings.rs  recommender.rs  settings.rs
src/dataprovider/: mod.rs  sql.rs  testdata.rs  unittestdata.rs
